# FeedBack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
backend/: README.md  banco.db  requirements.txt
backend/src/: .gitignore  alimentar_tabela.py  banco.db  main.py  pyproject.toml  requirements.txt  test.py  testesControllers.py
backend/src/config/: __init__.py  logger.py
backend/src/config/loggerManager/: log_handler.py
backend/src/domain/: __init__.py
backend/src/domain/models/: acesso.py  aluno.py  avaliacao.py  cordenacao.py  escola.py  materia.py  professor.py  responsavel.py  users.py
backend/src/infra/db/models_data/: __init__.py  acesso.py  aluno.py  avaliacao.py  cargo.py  escola.py  materia.py  municipio.py  professor.py  professor_turma.py  responsavel.py  turma.py
backend/src/infra/db/settings/: connection.py
backend/src/infra/repositories/: __init__.py  aluno_data.py  avaliacao_data.py  escola_data.py  materia_data.py  professor_data.py  turma_data.py
backend/src/routes/: __init__.py
backend/src/routes/routes/: routes.py
backend/src/routes/server/: server.py
backend/src/user_cases/: __init__.py  acesso.py  aluno.py  avaliacao.py  dashboard.py  escola.py  materia.py  municipio.py  professor.py  turma.py
backend/src/utils/: processIA.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/entites/: DSMunicipio.ts  Escola.ts  Historico.ts  Materia.ts
src/: alimentar_tabela.py  main.py  test.py  testesControllers.py
src/config/: log.py  (+1 more)
(+118 files in other folders)
