[project]
name = "feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "logging>=0.4.9.6",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]
